# a-api

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  models.py  router.py
app/models/: __init__.py  pet_models.py  pets_models.py  shelter_models.py  user_models.py
app/routes/: __init__.py  auth.py  healthcheck.py  pets.py  shelters.py  tutors.py
